[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interface/VisualMode.gd" type="Script" id=1]

[node name="VisualMode" type="CanvasModulate" groups=[
"Interface",
]]
color = Color( 0.14902, 0.345098, 0.0784314, 1 )
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ActiveTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="ActiveTimer" to="." method="_on_ActiveTimer_timeout"]
